<resources>
    <string name="app_name">SharedPreferencesDemo</string>
    <string name="shared_preferences_demo">Shared Preferences Demo</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="save">Save</string>
    <string name="name2">Name:</string>
    <string name="email2">Email:</string>
    <string name="phone2">Phone:</string>
</resources>